[package]
name = "slowhttptest-gui"
version = "0.1.0"
edition = "2021"
description = "A GUI frontend for slowhttptest"
license = "Apache-2.0"

[[bin]]
name = "slowhttptest-gui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"

[profile.release]
opt-level = 2
strip = true
